confluent/kubernetes/confluent-operator-1.7/control-center-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: control-center-ingress
  namespace: confluent-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: control-center.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-0-internal
                port:
                  number: 9021
